# diesel_issue_reproduction

./: .env  .gitignore  Cargo.toml  justfile  primary.sqlite3
migrations/2023-08-12-082417_first/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
