[package]
name = "reproduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.0", features =  ["sqlite"]}
uuid = {version = "1.4.0", features = [ "std", "v7", "fast-rng", "serde"], git = "https://github.com/Jeremiah-Griffin/uuid.git"}
dotenvy = "0.15.7"
libsqlite3-sys = {version = "0.26.0", features = ["bundled"]}
